Fix bugs on small screens

--- a/src/assets/scss/_base.scss
+++ b/src/assets/scss/_base.scss
@@ -2,7 +2,7 @@
   --p-font: 'Open Sans', sans-serif;
   --s-font: 'Roboto', sans-serif;
   max-width: 706px;
-  height: max(572px, 100vh);
+  height: 100vh;
   display: flex;
   flex-direction: column;
   margin: 0 auto;
